Updated app.py to run the default param LCCDE model

--- a/templates/run_model.html
+++ b/templates/run_model.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h2>Run Machine Learning Model</h2>
 
-<form action="/run_model" method="POST" class="p-4 bg-light rounded shadow-sm">
+<form action="/run" method="POST" class="p-4 bg-light rounded shadow-sm">
   <div class="mb-3">
     <label class="form-label">Select Model</label>
     <select class="form-select" name="model">
