--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     </div>
   </nav>
 
-  <div class="container mt-4 text-start">
+  <div class="container-fluid mt-4 text-start px-4">
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
