--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,8 +20,8 @@ form {
 
 .param-field {
   width: 100%;
-  max-width: 140px;
-  min-width: 90px;
+  max-width: none;
+  min-width: 160px;
 }
 
 .param-grid {
