Adjust parameter grid spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,8 @@ form {
 .param-grid {
   --bs-gutter-x: 0.35rem;
   --bs-gutter-y: 0.35rem;
+  max-width: 960px;
+  margin-left: 0;
 }
 
 .history-info {
